--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "VCPlayBot",
-  "logo": "https://telegra.ph/file/7ffa8d18b9b7f1b51a81e.jpg",
+  "name": "Price",
+  "logo": "https://telegra.ph/file/2540addca2cfb4fd4f4b0.jpg",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
   "repository": "https://github.com/QueenArzoo/VCPlayBot",
